force-app/main/default/objects/Receipt__c/fields/Collection_Center__c.field-meta.xml
<CustomField>
    <fullName>Collection_Center__c</fullName>
    <defaultValue>&quot;SIM-HQ&quot;</defaultValue>
    <label>Collection Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>