force-app/main/default/objects/Receipt__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>