force-app/main/default/objects/Receipt__c/fields/Payment_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_By__c</fullName>
    <label>Payment By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CUSTOMER</fullName>
                <default>true</default>
                <label>CUSTOMER</label>
            </value>
            <value>
                <fullName>SDF</fullName>
            </value>
            <value>
                <fullName>CROSS SELL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>