force-app/main/default/objects/Receipt__c/fields/System_Id__c.field-meta.xml
<CustomField>
    <fullName>System_Id__c</fullName>
    <formula>Invoice__r.System_Id__c</formula>
    <label>System Id</label>
    <type>Text</type>
</CustomField>