force-app/main/default/objects/Receipt__c/recordTypes/PD_Receipt.recordType-meta.xml
<RecordType>
    <fullName>PD_Receipt</fullName>
    <active>true</active>
    <description>MVP 1.0</description>
    <label>PD Receipt</label>
</RecordType>