force-app/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Receipt_Date__c</columns>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>GST_Amount__c</columns>
    <columns>Reference_No__c</columns>
    <columns>Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>